test-yaml/istio/store-virtualservice-inventory-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory-service
spec:
  hosts:
  - "inventory-service.apps.svc.cluster.local"
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: inventory-service
        port:
          number: 8080
        subset: v2
  - route:
    - destination:
        host: inventory-service
        port:
          number: 8080
        subset: v1
