test-yaml/istio/store-virtualservice-inventory-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory-service
spec:
  hosts:
  - "inventory-service.apps.svc.cluster.local"
  http:
  - match:
    - uri:
        exact: /inventory
    route:
    - destination:
        host: inventory-service
        port:
          number: 8080
        subset: v2
    timeout: 3s
