test-yaml/istio/store-virtualservice-order-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-service
spec:
  hosts:
  - "*"
  gateways:
  - store-gateway
  http:
  - fault:
      delay:
        fixedDelay: 7s
        percentage:
          value: 100
    match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: order-service
        port:
          number: 8080
        subset: v2
  - route:
    - destination:
        host: order-service
        port:
          number: 8080
        subset: v1
