test-yaml/istio/store-virtualservice-order-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-service
spec:
  hosts:
  - "*"
  gateways:
  - store-gateway
  http:
  - match:
    - uri:
        exact: /submit
    route:
    - destination:
        host: order-service
        port:
          number: 8080
        subset: v2
